--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2038,6 +2038,7 @@ Multimedia API</a>. </big>
         5.7.5 – 5.7.6 – Resource manager improved.<br>
         5.7.7 – 5.8.2 – Small changes.<br>
         5.8.3 – 5.8.5 – Background subsystem improved.<br>
+        5.8.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
