--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2048,6 +2048,7 @@ Multimedia API</a>. </big>
         5.8.7 – 5.9.1 – Sprite sheet subsystem improved.<br>
         5.9.2 – 5.9.4 – Small changes.<br>
         5.9.5 – Text drawing subsystem improved.<br>
+        5.9.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
