Windows 2000 support removed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -211,11 +211,11 @@
       <tbody>
         <tr>
           <td style="vertical-align: top;"><big>Operation system </big></td>
-          <td style="vertical-align: top;"><big>Windows 2000 or higher </big></td>
+          <td style="vertical-align: top;"><big>Windows XP or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>Additional software </big></td>
-          <td style="vertical-align: top;"><big>DirectX 7.0 or higher </big></td>
+          <td style="vertical-align: top;"><big>DirectX 8.1 or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>System type </big></td>
@@ -232,7 +232,7 @@
         <tr>
           <td colspan="1" rowspan="2" style="vertical-align: top;"><big>Processor
               </big></td>
-          <td style="vertical-align: top;"><big>Intel Pentium Pro 200 mhz for 32
+          <td style="vertical-align: top;"><big>Intel Pentium II 400 mhz for 32
               bit system </big></td>
         </tr>
         <tr>
@@ -287,11 +287,18 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       You need Open Watcom 1.9 or Open Watcom V2 Fork for old processors
       support.<br>
       <br>
-      <span style="text-decoration: underline;">Old version of Windows support</span><br>
+      <span style="text-decoration: underline;">Windows XP support</span><br>
       <br>
-      You need Open Watcom 1.9 or Open Watcom V2 Fork for Windows 2000 support.<br>
-      You need TDM-GCC or Visual C++ 2008 for Windows XP support.<br>
-    </big><big><br>
+      You need one of follow compilers for Windows XP support:<br>
+      <br>
+    </big>
+    <ul>
+      <li><big>TDM-GCC</big></li>
+      <li><big>Open Watcom 1.9</big></li>
+      <li><big>Open Watcom V2 Fork</big></li>
+      <li><big>Visual C++ 2008</big></li>
+    </ul>
+    <big> </big><big><br>
       <span style="text-decoration: underline;">Compiler optimization</span><br>
       <br>
       Disable all compiler optimization. It needs for correct work. See
@@ -582,7 +589,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Transparent mode is enabled by default.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with base sprite subsystem</span><br
-
         style="text-decoration: underline;">
       <br>
       <span style="font-style: italic;">Billboard</span> class provide simple
@@ -2048,7 +2054,8 @@ Multimedia API</a>. </big>
         5.8.7 – 5.9.1 – Sprite sheet subsystem improved.<br>
         5.9.2 – 5.9.4 – Small changes.<br>
         5.9.5 – Text drawing subsystem improved.<br>
-        5.9.6 – Small changes.<br>
+        5.9.6 – 5.9.8 – Small changes.<br>
+        5.9.9 – Windows 2000 support removed.<br>
       </big></span>
   </body>
 </html>
